--- a/app/src/main/res/layout/fragment_main_user.xml
+++ b/app/src/main/res/layout/fragment_main_user.xml
@@ -124,6 +124,48 @@
             android:text="@string/update_user_sub_title"
             android:textColor="@color/input" />
         </LinearLayout>
+
+      </LinearLayout>
+
+      <LinearLayout
+          android:id="@+id/history_ticket_list"
+          android:layout_width="350dp"
+          android:layout_height="60dp"
+          android:layout_marginTop="25dp"
+          android:background="@color/white"
+          android:orientation="horizontal"
+          android:padding="5dp"
+          android:weightSum="10">
+
+        <ImageView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_weight="2"
+            android:src="@drawable/ic_setting" />
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="8"
+            android:orientation="vertical">
+
+          <TextView
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:text="Lịch sử đặt vé"
+              android:textColor="@color/black"
+              android:textSize="16sp"
+              android:textStyle="bold" />
+
+          <TextView
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_marginTop="5dp"
+              android:text="Xem lại danh sách vé đã đặt"
+              android:textColor="@color/input" />
+        </LinearLayout>
+
       </LinearLayout>
 
       <LinearLayout
